# cpp files, this list is maintained manually

set(QuantExt_SRC calendars/amendedcalendar.cpp
calendars/austria.cpp
calendars/belgium.cpp
calendars/chile.cpp
calendars/cme.cpp
calendars/colombia.cpp
calendars/france.cpp
calendars/ice.cpp
calendars/israel.cpp
calendars/largejointcalendar.cpp
calendars/luxembourg.cpp
calendars/malaysia.cpp
calendars/netherlands.cpp
calendars/peru.cpp
calendars/philippines.cpp
calendars/spain.cpp
calendars/switzerland.cpp
calendars/wmr.cpp
cashflows/averageonindexedcoupon.cpp
cashflows/averageonindexedcouponpricer.cpp
cashflows/blackovernightindexedcouponpricer.cpp
cashflows/brlcdicouponpricer.cpp
cashflows/commoditycashflow.cpp
cashflows/commodityindexedaveragecashflow.cpp
cashflows/commodityindexedcashflow.cpp
cashflows/couponpricer.cpp
cashflows/cpicoupon.cpp
cashflows/cpicouponpricer.cpp
cashflows/durationadjustedcmscoupon.cpp
cashflows/durationadjustedcmscoupontsrpricer.cpp
cashflows/equitycoupon.cpp
cashflows/equitycouponpricer.cpp
cashflows/fixedratefxlinkednotionalcoupon.cpp
cashflows/floatingannuitycoupon.cpp
cashflows/floatingannuitynominal.cpp
cashflows/fxlinkedcashflow.cpp
cashflows/indexedcoupon.cpp
cashflows/jyyoyinflationcouponpricer.cpp
cashflows/lognormalcmsspreadpricer.cpp
cashflows/nonstandardcapflooredyoyinflationcoupon.cpp
cashflows/nonstandardinflationcouponpricer.cpp
cashflows/nonstandardyoyinflationcoupon.cpp
cashflows/overnightindexedcoupon.cpp
cashflows/quantocouponpricer.cpp
cashflows/strippedcapflooredcpicoupon.cpp
cashflows/strippedcapflooredyoyinflationcoupon.cpp
cashflows/subperiodscoupon.cpp
cashflows/subperiodscouponpricer.cpp
cashflows/yoyinflationcoupon.cpp
currencies/africa.cpp
currencies/america.cpp
currencies/asia.cpp
currencies/configurablecurrency.cpp
currencies/europe.cpp
currencies/metals.cpp
indexes/bondindex.cpp
indexes/commodityindex.cpp
indexes/compoequityindex.cpp
indexes/equityindex.cpp
indexes/fallbackiborindex.cpp
indexes/fxindex.cpp
indexes/genericiborindex.cpp
indexes/ibor/ameribor.cpp
indexes/ibor/boebaserate.cpp
indexes/ibor/brlcdi.cpp
indexes/ibor/ester.cpp
indexes/ibor/primeindex.cpp
indexes/ibor/sofr.cpp
indexes/inflationindexwrapper.cpp
indexes/offpeakpowerindex.cpp
indexes/region.cpp
instruments/averageois.cpp
instruments/brlcdiswap.cpp
instruments/cashflowresults.cpp
instruments/cashsettledeuropeanoption.cpp
instruments/cdsoption.cpp
instruments/commodityapo.cpp
instruments/commodityforward.cpp
instruments/creditdefaultswap.cpp
instruments/crossccybasismtmresetswap.cpp
instruments/crossccybasisswap.cpp
instruments/crossccyfixfloatmtmresetswap.cpp
instruments/crossccyfixfloatswap.cpp
instruments/crossccyswap.cpp
instruments/currencyswap.cpp
instruments/deposit.cpp
instruments/equityforward.cpp
instruments/fixedbmaswap.cpp
instruments/forwardbond.cpp
instruments/fxforward.cpp
instruments/impliedbondspread.cpp
instruments/makeaverageois.cpp
instruments/makecds.cpp
instruments/oibasisswap.cpp
instruments/oiccbasisswap.cpp
instruments/payment.cpp
instruments/rebatedexercise.cpp
instruments/subperiodsswap.cpp
instruments/tenorbasisswap.cpp
math/deltagammavar.cpp
math/fillemptymatrix.cpp
methods/multipathgeneratorbase.cpp
models/annuitymapping.cpp
models/carrmadanarbitragecheck.cpp
models/cdsoptionhelper.cpp
models/cirppimplieddefaulttermstructure.cpp
models/cmscaphelper.cpp
models/cpicapfloorhelper.cpp
models/crcirpp.cpp
models/crossassetanalytics.cpp
models/crossassetmodel.cpp
models/crossassetmodelimpliedeqvoltermstructure.cpp
models/crossassetmodelimpliedfxvoltermstructure.cpp
models/dkimpliedyoyinflationtermstructure.cpp
models/dkimpliedzeroinflationtermstructure.cpp
models/eqbsconstantparametrization.cpp
models/eqbsparametrization.cpp
models/eqbspiecewiseconstantparametrization.cpp
models/exactbachelierimpliedvolatility.cpp
models/fxbsconstantparametrization.cpp
models/fxbsparametrization.cpp
models/fxbspiecewiseconstantparametrization.cpp
models/fxeqoptionhelper.cpp
models/gaussian1dcrossassetadaptor.cpp
models/infjyparameterization.cpp
models/jyimpliedyoyinflationtermstructure.cpp
models/jyimpliedzeroinflationtermstructure.cpp
models/lgm.cpp
models/lgmcalibrationinfo.cpp
models/lgmimplieddefaulttermstructure.cpp
models/lgmimpliedyieldtermstructure.cpp
models/linearannuitymapping.cpp
models/linkablecalibratedmodel.cpp
models/normalsabr.cpp
models/normalsabrsmilesection.cpp
models/parametrization.cpp
models/piecewiseconstanthelper.cpp
models/projectedcrossassetmodel.cpp
models/yoycapfloorhelper.cpp
models/yoyinflationmodeltermstructure.cpp
models/yoyswaphelper.cpp
models/zeroinflationmodeltermstructure.cpp
pricingengines/analyticcashsettledeuropeanengine.cpp
pricingengines/analyticcclgmfxoptionengine.cpp
pricingengines/analyticdkcpicapfloorengine.cpp
pricingengines/analyticeuropeanforwardengine.cpp
pricingengines/analyticjycpicapfloorengine.cpp
pricingengines/analyticjyyoycapfloorengine.cpp
pricingengines/analyticlgmcdsoptionengine.cpp
pricingengines/analyticlgmswaptionengine.cpp
pricingengines/analyticxassetlgmeqoptionengine.cpp
pricingengines/baroneadesiwhaleyengine.cpp
pricingengines/blackcdsoptionengine.cpp
pricingengines/commodityapoengine.cpp
pricingengines/cpibacheliercapfloorengine.cpp
pricingengines/cpiblackcapfloorengine.cpp
pricingengines/cpicapfloorengines.cpp
pricingengines/crossccyswapengine.cpp
pricingengines/depositengine.cpp
pricingengines/discountingcommodityforwardengine.cpp
pricingengines/discountingcurrencyswapengine.cpp
pricingengines/discountingequityforwardengine.cpp
pricingengines/discountingforwardbondengine.cpp
pricingengines/discountingfxforwardengine.cpp
pricingengines/discountingriskybondengine.cpp
pricingengines/discountingswapenginemulticurve.cpp
pricingengines/inflationcapfloorengines.cpp
pricingengines/lgmconvolutionsolver.cpp
pricingengines/midpointcdsengine.cpp
pricingengines/numericlgmswaptionengine.cpp
pricingengines/oiccbasisswapengine.cpp
pricingengines/paymentdiscountingengine.cpp
processes/crcirppstateprocess.cpp
processes/crossassetstateprocess.cpp
processes/irlgm1fstateprocess.cpp
quotes/logquote.cpp
termstructures/aposurface.cpp
termstructures/averagefuturepricehelper.cpp
termstructures/averageoffpeakpowerhelper.cpp
termstructures/averageoisratehelper.cpp
termstructures/averagespotpricehelper.cpp
termstructures/basistwoswaphelper.cpp
termstructures/blackdeltautilities.cpp
termstructures/blackvariancecurve3.cpp
termstructures/blackvariancesurfacemoneyness.cpp
termstructures/blackvariancesurfacesparse.cpp
termstructures/blackvariancesurfacestddevs.cpp
termstructures/blackvolsurfacebfrr.cpp
termstructures/blackvolsurfacedelta.cpp
termstructures/blackvolsurfacewithatm.cpp
termstructures/brlcdiratehelper.cpp
termstructures/capfloorhelper.cpp
termstructures/capfloortermvolsurface.cpp
termstructures/correlationtermstructure.cpp
termstructures/crossccybasismtmresetswaphelper.cpp
termstructures/crossccybasisswaphelper.cpp
termstructures/crossccyfixfloatmtmresetswaphelper.cpp
termstructures/crossccyfixfloatswaphelper.cpp
termstructures/crosscurrencypricetermstructure.cpp
termstructures/datedstrippedoptionlet.cpp
termstructures/datedstrippedoptionletadapter.cpp
termstructures/defaultprobabilityhelpers.cpp
termstructures/discountratiomodifiedcurve.cpp
termstructures/dynamiccpivolatilitystructure.cpp
termstructures/dynamicoptionletvolatilitystructure.cpp
termstructures/dynamicswaptionvolmatrix.cpp
termstructures/dynamicyoyoptionletvolatilitystructure.cpp
termstructures/eqcommoptionsurfacestripper.cpp
termstructures/equityblackvolsurfaceproxy.cpp
termstructures/equityforwardcurvestripper.cpp
termstructures/flatcorrelation.cpp
termstructures/futurepricehelper.cpp
termstructures/fxblackvolsurface.cpp
termstructures/fxvannavolgasmilesection.cpp
termstructures/hazardspreadeddefaulttermstructure.cpp
termstructures/iborfallbackcurve.cpp
termstructures/immfraratehelper.cpp
termstructures/oibasisswaphelper.cpp
termstructures/oiccbasisswaphelper.cpp
termstructures/oisratehelper.cpp
termstructures/optionletstripper.cpp
termstructures/optionletstripper1.cpp
termstructures/optionletstripper2.cpp
termstructures/pricetermstructure.cpp
termstructures/pricetermstructureadapter.cpp
termstructures/spreadedblackvolatilitycurve.cpp
termstructures/spreadedblackvolatilitysurfacemoneyness.cpp
termstructures/spreadedcorrelationcurve.cpp
termstructures/spreadedcpivolatilitysurface.cpp
termstructures/spreadeddiscountcurve.cpp
termstructures/spreadedinflationcurve.cpp
termstructures/spreadedoptionletvolatility.cpp
termstructures/spreadedoptionletvolatility2.cpp
termstructures/spreadedpricetermstructure.cpp
termstructures/spreadedsmilesection.cpp
termstructures/spreadedsmilesection2.cpp
termstructures/spreadedsurvivalprobabilitytermstructure.cpp
termstructures/spreadedswaptionvolatility.cpp
termstructures/spreadedyoyvolsurface.cpp
termstructures/strippedoptionletadapter2.cpp
termstructures/strippedyoyinflationoptionletvol.cpp
termstructures/subperiodsswaphelper.cpp
termstructures/swaptionvolatilityconverter.cpp
termstructures/swaptionvolconstantspread.cpp
termstructures/swaptionvolcube2.cpp
termstructures/tenorbasisswaphelper.cpp
termstructures/yoyinflationoptionletvolstripper.cpp
time/yearcounter.cpp
utilities/inflation.cpp)

# hpp files, this list is maintained manually

set(QuantExt_HDR auto_link.hpp
calendars/amendedcalendar.hpp
calendars/austria.hpp
calendars/belgium.hpp
calendars/chile.hpp
calendars/cme.hpp
calendars/colombia.hpp
calendars/france.hpp
calendars/ice.hpp
calendars/israel.hpp
calendars/largejointcalendar.hpp
calendars/luxembourg.hpp
calendars/malaysia.hpp
calendars/netherlands.hpp
calendars/peru.hpp
calendars/philippines.hpp
calendars/spain.hpp
calendars/switzerland.hpp
calendars/wmr.hpp
cashflows/averageonindexedcoupon.hpp
cashflows/averageonindexedcouponpricer.hpp
cashflows/blackovernightindexedcouponpricer.hpp
cashflows/brlcdicouponpricer.hpp
cashflows/commoditycashflow.hpp
cashflows/commodityindexedaveragecashflow.hpp
cashflows/commodityindexedcashflow.hpp
cashflows/couponpricer.hpp
cashflows/cpicoupon.hpp
cashflows/cpicouponpricer.hpp
cashflows/durationadjustedcmscoupon.hpp
cashflows/durationadjustedcmscoupontsrpricer.hpp
cashflows/equitycoupon.hpp
cashflows/equitycouponpricer.hpp
cashflows/fixedratefxlinkednotionalcoupon.hpp
cashflows/floatingannuitycoupon.hpp
cashflows/floatingannuitynominal.hpp
cashflows/floatingratefxlinkednotionalcoupon.hpp
cashflows/fxlinkedcashflow.hpp
cashflows/indexedcoupon.hpp
cashflows/jyyoyinflationcouponpricer.hpp
cashflows/lognormalcmsspreadpricer.hpp
cashflows/nonstandardcapflooredyoyinflationcoupon.hpp
cashflows/nonstandardinflationcouponpricer.hpp
cashflows/nonstandardyoyinflationcoupon.hpp
cashflows/overnightindexedcoupon.hpp
cashflows/quantocouponpricer.hpp
cashflows/strippedcapflooredcpicoupon.hpp
cashflows/strippedcapflooredyoyinflationcoupon.hpp
cashflows/subperiodscoupon.hpp
cashflows/subperiodscouponpricer.hpp
cashflows/yoyinflationcoupon.hpp
currencies/africa.hpp
currencies/america.hpp
currencies/asia.hpp
currencies/configurablecurrency.hpp
currencies/currencycomparator.hpp
currencies/europe.hpp
currencies/metals.hpp
indexes/behicp.hpp
indexes/bmaindexwrapper.hpp
indexes/bondindex.hpp
indexes/cacpi.hpp
indexes/commodityindex.hpp
indexes/compoequityindex.hpp
indexes/decpi.hpp
indexes/dkcpi.hpp
indexes/eqfxindexbase.hpp
indexes/equityindex.hpp
indexes/escpi.hpp
indexes/fallbackiborindex.hpp
indexes/frcpi.hpp
indexes/fxindex.hpp
indexes/genericiborindex.hpp
indexes/genericindex.hpp
indexes/ibor/ambor.hpp
indexes/ibor/ameribor.hpp
indexes/ibor/audbbsw.hpp
indexes/ibor/boebaserate.hpp
indexes/ibor/brlcdi.hpp
indexes/ibor/chfsaron.hpp
indexes/ibor/chftois.hpp
indexes/ibor/clpcamara.hpp
indexes/ibor/cnhhibor.hpp
indexes/ibor/cnhshibor.hpp
indexes/ibor/cnyrepofix.hpp
indexes/ibor/copibr.hpp
indexes/ibor/corra.hpp
indexes/ibor/czkpribor.hpp
indexes/ibor/demlibor.hpp
indexes/ibor/dkkcibor.hpp
indexes/ibor/dkkcita.hpp
indexes/ibor/dkkois.hpp
indexes/ibor/ester.hpp
indexes/ibor/hkdhibor.hpp
indexes/ibor/hkdhonia.hpp
indexes/ibor/hufbubor.hpp
indexes/ibor/idridrfix.hpp
indexes/ibor/idrjibor.hpp
indexes/ibor/ilstelbor.hpp
indexes/ibor/inrmiborois.hpp
indexes/ibor/inrmifor.hpp
indexes/ibor/jpyeytibor.hpp
indexes/ibor/krwcd.hpp
indexes/ibor/krwkoribor.hpp
indexes/ibor/mxntiie.hpp
indexes/ibor/myrklibor.hpp
indexes/ibor/noknibor.hpp
indexes/ibor/nowa.hpp
indexes/ibor/nzdbkbm.hpp
indexes/ibor/phpphiref.hpp
indexes/ibor/plnpolonia.hpp
indexes/ibor/plnwibor.hpp
indexes/ibor/primeindex.hpp
indexes/ibor/rubmosprime.hpp
indexes/ibor/saibor.hpp
indexes/ibor/seksior.hpp
indexes/ibor/sekstibor.hpp
indexes/ibor/sekstina.hpp
indexes/ibor/sgdsibor.hpp
indexes/ibor/sgdsor.hpp
indexes/ibor/skkbribor.hpp
indexes/ibor/sofr.hpp
indexes/ibor/thbbibor.hpp
indexes/ibor/tonar.hpp
indexes/ibor/twdtaibor.hpp
indexes/inflationindexobserver.hpp
indexes/inflationindexwrapper.hpp
indexes/offpeakpowerindex.hpp
indexes/region.hpp
indexes/secpi.hpp
instruments/averageois.hpp
instruments/brlcdiswap.hpp
instruments/cashflowresults.hpp
instruments/cashsettledeuropeanoption.hpp
instruments/cdsoption.hpp
instruments/commodityapo.hpp
instruments/commodityforward.hpp
instruments/creditdefaultswap.hpp
instruments/crossccybasismtmresetswap.hpp
instruments/crossccybasisswap.hpp
instruments/crossccyfixfloatmtmresetswap.hpp
instruments/crossccyfixfloatswap.hpp
instruments/crossccyswap.hpp
instruments/currencyswap.hpp
instruments/deposit.hpp
instruments/equityforward.hpp
instruments/fixedbmaswap.hpp
instruments/forwardbond.hpp
instruments/fxforward.hpp
instruments/impliedbondspread.hpp
instruments/makeaverageois.hpp
instruments/makecds.hpp
instruments/oibasisswap.hpp
instruments/oiccbasisswap.hpp
instruments/payment.hpp
instruments/rebatedexercise.hpp
instruments/subperiodsswap.hpp
instruments/tenorbasisswap.hpp
instruments/vanillaforwardoption.hpp
interpolators/optioninterpolator2d.hpp
math/covariancesalvage.hpp
math/deltagammavar.hpp
math/fillemptymatrix.hpp
math/flatextrapolation.hpp
math/logquadraticinterpolation.hpp
math/nadarayawatson.hpp
math/quadraticinterpolation.hpp
math/stabilisedglls.hpp
math/trace.hpp
methods/multipathgeneratorbase.hpp
methods/pathgeneratorfactory.hpp
models/annuitymapping.hpp
models/carrmadanarbitragecheck.hpp
models/cdsoptionhelper.hpp
models/cirppconstantfellerparametrization.hpp
models/cirppconstantparametrization.hpp
models/cirppimplieddefaulttermstructure.hpp
models/cirppparametrization.hpp
models/cmscaphelper.hpp
models/cpicapfloorhelper.hpp
models/crcirpp.hpp
models/crlgm1fparametrization.hpp
models/crossassetanalytics.hpp
models/crossassetanalyticsbase.hpp
models/crossassetmodel.hpp
models/crossassetmodelimpliedeqvoltermstructure.hpp
models/crossassetmodelimpliedfxvoltermstructure.hpp
models/dkimpliedyoyinflationtermstructure.hpp
models/dkimpliedzeroinflationtermstructure.hpp
models/eqbsconstantparametrization.hpp
models/eqbsparametrization.hpp
models/eqbspiecewiseconstantparametrization.hpp
models/exactbachelierimpliedvolatility.hpp
models/fxbsconstantparametrization.hpp
models/fxbsparametrization.hpp
models/fxbspiecewiseconstantparametrization.hpp
models/fxeqoptionhelper.hpp
models/gaussian1dcrossassetadaptor.hpp
models/infdkparametrization.hpp
models/infjyparameterization.hpp
models/irlgm1fconstantparametrization.hpp
models/irlgm1fparametrization.hpp
models/irlgm1fpiecewiseconstanthullwhiteadaptor.hpp
models/irlgm1fpiecewiseconstantparametrization.hpp
models/irlgm1fpiecewiselinearparametrization.hpp
models/jyimpliedyoyinflationtermstructure.hpp
models/jyimpliedzeroinflationtermstructure.hpp
models/lgm.hpp
models/lgmcalibrationinfo.hpp
models/lgmimplieddefaulttermstructure.hpp
models/lgmimpliedyieldtermstructure.hpp
models/linearannuitymapping.hpp
models/linkablecalibratedmodel.hpp
models/normalsabr.hpp
models/normalsabrinterpolation.hpp
models/normalsabrsmilesection.hpp
models/parametrization.hpp
models/piecewiseconstanthelper.hpp
models/projectedcrossassetmodel.hpp
models/pseudoparameter.hpp
models/yoycapfloorhelper.hpp
models/yoyinflationmodeltermstructure.hpp
models/yoyswaphelper.hpp
models/zeroinflationmodeltermstructure.hpp
pricingengines/analyticcashsettledeuropeanengine.hpp
pricingengines/analyticcclgmfxoptionengine.hpp
pricingengines/analyticdkcpicapfloorengine.hpp
pricingengines/analyticeuropeanforwardengine.hpp
pricingengines/analyticjycpicapfloorengine.hpp
pricingengines/analyticjyyoycapfloorengine.hpp
pricingengines/analyticlgmcdsoptionengine.hpp
pricingengines/analyticlgmswaptionengine.hpp
pricingengines/analyticxassetlgmeqoptionengine.hpp
pricingengines/baroneadesiwhaleyengine.hpp
pricingengines/blackcdsoptionengine.hpp
pricingengines/commodityapoengine.hpp
pricingengines/cpibacheliercapfloorengine.hpp
pricingengines/cpiblackcapfloorengine.hpp
pricingengines/cpicapfloorengines.hpp
pricingengines/crossccyswapengine.hpp
pricingengines/depositengine.hpp
pricingengines/discountingcommodityforwardengine.hpp
pricingengines/discountingcurrencyswapengine.hpp
pricingengines/discountingequityforwardengine.hpp
pricingengines/discountingforwardbondengine.hpp
pricingengines/discountingfxforwardengine.hpp
pricingengines/discountingriskybondengine.hpp
pricingengines/discountingswapenginemulticurve.hpp
pricingengines/inflationcapfloorengines.hpp
pricingengines/lgmconvolutionsolver.hpp
pricingengines/midpointcdsengine.hpp
pricingengines/numericlgmswaptionengine.hpp
pricingengines/oiccbasisswapengine.hpp
pricingengines/paymentdiscountingengine.hpp
processes/crcirppstateprocess.hpp
processes/crossassetstateprocess.hpp
processes/irlgm1fstateprocess.hpp
quotes/exceptionquote.hpp
quotes/logquote.hpp
termstructures/adjusteddefaultcurve.hpp
termstructures/aposurface.hpp
termstructures/averagefuturepricehelper.hpp
termstructures/averageoffpeakpowerhelper.hpp
termstructures/averageoisratehelper.hpp
termstructures/averagespotpricehelper.hpp
termstructures/basistwoswaphelper.hpp
termstructures/blackdeltautilities.hpp
termstructures/blackinvertedvoltermstructure.hpp
termstructures/blackmonotonevarvoltermstructure.hpp
termstructures/blacktriangulationatmvol.hpp
termstructures/blackvariancecurve3.hpp
termstructures/blackvariancesurfacemoneyness.hpp
termstructures/blackvariancesurfacesparse.hpp
termstructures/blackvariancesurfacestddevs.hpp
termstructures/blackvolsurfacebfrr.hpp
termstructures/blackvolsurfacedelta.hpp
termstructures/blackvolsurfacewithatm.hpp
termstructures/brlcdiratehelper.hpp
termstructures/capfloorhelper.hpp
termstructures/capfloortermvolcurve.hpp
termstructures/capfloortermvolsurface.hpp
termstructures/capfloortermvolsurfacesparse.hpp
termstructures/commodityaveragebasispricecurve.hpp
termstructures/commoditybasispricecurve.hpp
termstructures/correlationtermstructure.hpp
termstructures/crossccybasismtmresetswaphelper.hpp
termstructures/crossccybasisswaphelper.hpp
termstructures/crossccyfixfloatmtmresetswaphelper.hpp
termstructures/crossccyfixfloatswaphelper.hpp
termstructures/crosscurrencypricetermstructure.hpp
termstructures/datedstrippedoptionlet.hpp
termstructures/datedstrippedoptionletadapter.hpp
termstructures/datedstrippedoptionletbase.hpp
termstructures/defaultprobabilityhelpers.hpp
termstructures/discountratiomodifiedcurve.hpp
termstructures/dynamicblackvoltermstructure.hpp
termstructures/dynamiccpivolatilitystructure.hpp
termstructures/dynamicoptionletvolatilitystructure.hpp
termstructures/dynamicstype.hpp
termstructures/dynamicswaptionvolmatrix.hpp
termstructures/dynamicyoyoptionletvolatilitystructure.hpp
termstructures/eqcommoptionsurfacestripper.hpp
termstructures/equityblackvolsurfaceproxy.hpp
termstructures/equityforwardcurvestripper.hpp
termstructures/equityvolconstantspread.hpp
termstructures/flatcorrelation.hpp
termstructures/futurepricehelper.hpp
termstructures/fxblackvolsurface.hpp
termstructures/fxsmilesection.hpp
termstructures/fxvannavolgasmilesection.hpp
termstructures/hazardspreadeddefaulttermstructure.hpp
termstructures/iborfallbackcurve.hpp
termstructures/immfraratehelper.hpp
termstructures/interpolatedcorrelationcurve.hpp
termstructures/interpolatedcpivolatilitysurface.hpp
termstructures/interpolateddiscountcurve.hpp
termstructures/interpolateddiscountcurve2.hpp
termstructures/interpolatedhazardratecurve.hpp
termstructures/interpolatedsurvivalprobabilitycurve.hpp
termstructures/interpolatedyoycapfloortermpricesurface.hpp
termstructures/iterativebootstrap.hpp
termstructures/kinterpolatedyoyoptionletvolatilitysurface.hpp
termstructures/multisectiondefaultcurve.hpp
termstructures/oibasisswaphelper.hpp
termstructures/oiccbasisswaphelper.hpp
termstructures/oisratehelper.hpp
termstructures/optionletcurve.hpp
termstructures/optionletstripper.hpp
termstructures/optionletstripper1.hpp
termstructures/optionletstripper2.hpp
termstructures/optionletstripperwithatm.hpp
termstructures/optionpricesurface.hpp
termstructures/piecewiseatmoptionletcurve.hpp
termstructures/piecewiseoptionletcurve.hpp
termstructures/piecewiseoptionletstripper.hpp
termstructures/piecewisepricecurve.hpp
termstructures/pricecurve.hpp
termstructures/pricetermstructure.hpp
termstructures/pricetermstructureadapter.hpp
termstructures/probabilitytraits.hpp
termstructures/spreadedblackvolatilitycurve.hpp
termstructures/spreadedblackvolatilitysurfacemoneyness.hpp
termstructures/spreadedcorrelationcurve.hpp
termstructures/spreadedcpivolatilitysurface.hpp
termstructures/spreadeddiscountcurve.hpp
termstructures/spreadedinflationcurve.hpp
termstructures/spreadedoptionletvolatility.hpp
termstructures/spreadedoptionletvolatility2.hpp
termstructures/spreadedpricetermstructure.hpp
termstructures/spreadedsmilesection.hpp
termstructures/spreadedsmilesection2.hpp
termstructures/spreadedsurvivalprobabilitytermstructure.hpp
termstructures/spreadedswaptionvolatility.hpp
termstructures/spreadedyoyvolsurface.hpp
termstructures/staticallycorrectedyieldtermstructure.hpp
termstructures/strippedcpivolatilitystructure.hpp
termstructures/strippedoptionletadapter.hpp
termstructures/strippedoptionletadapter2.hpp
termstructures/strippedyoyinflationoptionletvol.hpp
termstructures/subperiodsswaphelper.hpp
termstructures/survivalprobabilitycurve.hpp
termstructures/swaptionvolatilityconverter.hpp
termstructures/swaptionvolconstantspread.hpp
termstructures/swaptionvolcube2.hpp
termstructures/swaptionvolcubewithatm.hpp
termstructures/tenorbasisswaphelper.hpp
termstructures/weightedyieldtermstructure.hpp
termstructures/yieldplusdefaultyieldtermstructure.hpp
termstructures/yoyinflationcurveobservermoving.hpp
termstructures/yoyinflationcurveobserverstatic.hpp
termstructures/yoyinflationoptionletvolstripper.hpp
termstructures/zeroinflationcurveobservermoving.hpp
termstructures/zeroinflationcurveobserverstatic.hpp
time/futureexpirycalculator.hpp
time/yearcounter.hpp
utilities/inflation.hpp
version.hpp)

writeAll("qle" "quantext.hpp" "auto_link.hpp" "${QuantExt_HDR}")
add_library(${QLE_LIB_NAME} ${QuantExt_SRC})
target_link_libraries(${QLE_LIB_NAME} ${QL_LIB_NAME} ${Boost_LIBRARIES})


install(DIRECTORY . DESTINATION include/qle
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

install(TARGETS ${QLE_LIB_NAME}
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        )
